tests/machine/x/pl/string_compare.out
ERROR: /workspace/mochi/tests/machine/x/pl/string_compare.pl:7:9: Syntax error: Operator expected

